✨ (grapher) prevent controls from overlapping

--- a/packages/@ourworldindata/grapher/src/controls/MapProjectionMenu.scss
+++ b/packages/@ourworldindata/grapher/src/controls/MapProjectionMenu.scss
@@ -1,6 +1,9 @@
 .map-projection-menu {
-    .control {
+    width: 150px;
+
+    .menu {
         min-width: 150px;
+        right: 0;
     }
 
     .menu:before {
